# rust-repository-template

./: .rustfmt.toml  Cargo.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
